saint-lascivious.github.io: new page, news and updates
Changes to be committed:
 - modified:   aboutsainternet.html
 - modified:   connecttosainternet.html
 - modified:   filtereddns.html
 - modified:   newsandupdates.html
 - modified:   portsandprotocols.html
 - modified:   resources/stylesheets/button_home.css
 - new file:   resources/stylesheets/datetime.css
 - modified:   testsainternet.html

--- a/connecttosainternet.html
+++ b/connecttosainternet.html
@@ -79,10 +79,10 @@
           <a class="mdl-navigation__link" href="index.html">Home</a>
           <a class="mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
           <a class="mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
-          <a class="mdl-navigation__link" href="aboutsainternet.html"> <icon class="fa-solid fa-arrow-right-long"></icon> About Filtered DNS</a>
-          <a class="mdl-navigation__link" href="#connecttosainternet"> <icon class="fa-solid fa-arrow-right-long"></icon> <b>Connect to Sainternet</b></a>
-          <a class="mdl-navigation__link" href="portsandprotocols.html"> <icon class="fa-solid fa-arrow-right-long"></icon> Ports and Protocols</a>
-          <a class="mdl-navigation__link" href="testsainternet.html"> <icon class="fa-solid fa-arrow-right-long"></icon> Test Sainternet</a>
+          <a class="mdl-navigation__link" href="aboutsainternet.html"> - About Filtered DNS</a>
+          <a class="mdl-navigation__link" href="#connecttosainternet"> <b>- Connect to Sainternet</b></a>
+          <a class="mdl-navigation__link" href="portsandprotocols.html"> - Ports and Protocols</a>
+          <a class="mdl-navigation__link" href="testsainternet.html"> - Test Sainternet</a>
           <a class="mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
         </nav>
         <span class="mdl-layout-title">GitHub</span>
