--- a/testsainternet.html
+++ b/testsainternet.html
@@ -80,10 +80,10 @@
           <a class="mdl-navigation__link" href="index.html">Home</a>
           <a class="mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
           <a class="mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
-          <a class="mdl-navigation__link" href="aboutsainternet.html"> <icon class="fa-solid fa-arrow-right-long"></icon> About Sainternet</a>
-          <a class="mdl-navigation__link" href="connecttosainternet.html"> <icon class="fa-solid fa-arrow-right-long"></icon> Connect to Sainternet</a>
-          <a class="mdl-navigation__link" href="portsandprotocols.html"> <icon class="fa-solid fa-arrow-right-long"></icon> Ports and Protocols</a>
-          <a class="mdl-navigation__link" href="#testsainternet"> <icon class="fa-solid fa-arrow-right-long"></icon> <b>Test Sainternet</b></a>
+          <a class="mdl-navigation__link" href="aboutsainternet.html"> - About Filtered DNS</a>
+          <a class="mdl-navigation__link" href="connecttosainternet.html"> - Connect to Sainternet</a>
+          <a class="mdl-navigation__link" href="portsandprotocols.html"> - Ports and Protocols</a>
+          <a class="mdl-navigation__link" href="#testsainternet"> <b>- Test Sainternet</b></a>
           <a class="mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
         </nav>
         <span class="mdl-layout-title">GitHub</span>
