--- a/pokedexoverdns.html
+++ b/pokedexoverdns.html
@@ -57,6 +57,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="resources/stylesheets/button_home.css">
     <link rel="stylesheet" href="resources/stylesheets/img.css">
+    <link rel="stylesheet" href="resources/stylesheets/pre.css">
     <link rel="stylesheet" href="resources/stylesheets/ribbons.css">
     <link rel="stylesheet" href="resources/stylesheets/sainternet.css">
   </head>
@@ -112,6 +113,18 @@
               <p>
                 This fun (<i>ab</i>)use of DNS enables one to query a Pokémon species name (currently supported: English) in order to receive its <a href="https://bulbapedia.bulbagarden.net/wiki/List_of_Pok%C3%A9mon_by_National_Pok%C3%A9dex_number">National Pokédex Number</a> (NPN), or query an NPN (zero padding optional) in order to receive the Pokémon species name (currently supported: English, Japanese <a href="https://en.wikipedia.org/wiki/Romanization_of_Japanese">Rōmaji</a>).
               </p>
+              <p>
+                Example Pokédex over DNS query using <a href="https://linux.die.net/man/1/dig">dig</a>:
+              </p>
+              <pre>
+dig +short txt wurmple.pokedex @dns.sainternet.xyz
+              </pre>
+              <p>
+                Example Pokédex over DNS query using <a href="https://linux.die.net/man/1/nslookup">nslookup</a>:
+              </p>
+              <pre>
+nslookup -type=txt 265.pokedex dns.sainternet.xyz
+              </pre>
               <p>
                 <a href="https://www.nlnetlabs.nl/projects/unbound/about/">Unbound</a> local-data record configuration for the .pokedex virtual domain available <a href="https://github.com/saint-lascivious/unbound-config/blob/master/configs/pokedex.conf">here</a>.
               </p>
