--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <footer class="sainternet-footer mdl-mini-footer">
           <div class="mdl-mini-footer--left-section">
             <ul class="mdl-mini-footer--link-list">
-              <li><a href="mailto:saint@sainternet.xyz"><icon class="fa-solid fa-at"></icon></a></li>
+              <li><a href="mailto:saint@sainternet.xyz" target="_blank" rel="noopener noreferrer"><icon class="fa-solid fa-at"></icon></a></li>
               <li><a href="https://discord.gg/NC7taVyn"><icon class="fa-brands fa-discord"></icon></a></li>
               <li><a href="https://github.com/saint-lascivious"><icon class="fa-brands fa-github"></icon></a></li>
               <li><a href="https://www.reddit.com/user/saint-lascivious"><icon class="fa-brands fa-reddit"></icon></a></li>
