saint-lascivious.github.io: fix news and updates from home
Changes to be committed:
 - modified:   index.html

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
           <div class="mdl-layout-spacer"></div>
           <nav class="mdl-navigation mdl-layout--large-screen-only">
             <a class="mdl-navigation__link" href="#welcome"><b>Home</b></a>
+            <a class="mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
             <a class="mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
             <a class="mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
           </nav>
@@ -76,6 +77,7 @@
         <span class="mdl-layout-title">sainternet.xyz</span>
         <nav class="mdl-navigation">
           <a class="mdl-navigation__link" href="#welcome"><b>Home</b></a>
+          <a class="mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
           <a class="mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
           <a class="mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
         </nav>
