--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header mdl-shadow--4dp">
         <div class="mdl-layout__header-row">
-          <span class="mdl-layout-title">saint<span style="font-weight: 300">ernet.xyz</span></span>
+          <span class="mdl-layout-title"><span class="embiggen">saint</span><span style="font-weight: 300">ernet.xyz</span></span>
           <div class="mdl-layout-spacer"></div>
           <nav class="mdl-navigation mdl-layout--large-screen-only">
             <a class="mdl-navigation__link" href="#welcome"><b>Home</b></a>
@@ -107,7 +107,7 @@
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="welcome">Welcome</h3>
+            <h3 id="welcome"><span class="embiggen">Welcome</span></h3>
               <picture>
                 <source srcset="resources/images/wurmple-shiny.png" media="(prefers-color-scheme: dark)">
                 <img src="resources/images/wurmple.png" alt="Image supplied not illustrative, the author is not a Pokémon.">
