--- a/404.html
+++ b/404.html
@@ -67,7 +67,7 @@
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header mdl-shadow--4dp">
         <div class="mdl-layout__header-row">
-          <span class="mdl-layout-title">saint<span style="font-weight: 300">ernet.xyz</span></span>
+          <span class="mdl-layout-title"><span class="embiggen">saint</span><span style="font-weight: 300">ernet.xyz</span></span>
           <div class="mdl-layout-spacer"></div>
           <nav class="mdl-navigation mdl-layout--large-screen-only">
             <a class="mdl-navigation__link" href="index.html">Home</a>
@@ -109,7 +109,7 @@
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="pokemon404">Pokémon #404<br>Luxio<br>(Spark Pokémon)</h3>
+            <h3 id="pokemon404"><span class="embiggen">Pokémon #404<br>Luxio<br>(Spark Pokémon)</span></h3>
               <picture>
                 <source srcset="resources/images/luxio-shiny.png" media="(prefers-color-scheme: dark)">
                 <img src="resources/images/luxio.png" alt="Pokémon #404, Luxio (Spark Pokémon): Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.">
@@ -125,7 +125,7 @@
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="example">Example Pokédex over DNS Queries</h3>
+            <h3 id="example"><span class="embiggen">Example Pokédex over DNS Queries</span></h3>
               <p>
                 Example Pokédex over DNS query using <a href="https://linux.die.net/man/1/dig">dig</a>:
               </p>
