--- a/aboutsainternet.html
+++ b/aboutsainternet.html
@@ -65,7 +65,7 @@
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header mdl-shadow--4dp">
         <div class="mdl-layout__header-row">
-          <span class="mdl-layout-title">saint<span style="font-weight: 300">ernet.xyz</span></span>
+          <span class="mdl-layout-title"><span class="embiggen">saint</span><span style="font-weight: 300">ernet.xyz</span></span>
           <div class="mdl-layout-spacer"></div>
           <nav class="mdl-navigation mdl-layout--large-screen-only">
             <a class="mdl-navigation__link" href="index.html">Home</a>
@@ -107,7 +107,7 @@
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="aboutsainternet">About Sainternet</h3>
+            <h3 id="aboutsainternet"><span class="embiggen">About Sainternet</span></h3>
               <p>
                 Sainternet Filtered DNS is made possible using, but neither endorsed nor condoned by, the following projects.
               </p>
@@ -116,7 +116,7 @@
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="dnsdist">dnsdist</h3>
+            <h3 id="dnsdist"><span class="embiggen">dnsdist</span></h3>
               <p>
                 <a href="https://github.com/PowerDNS/pdns/blob/master/pdns/README-dnsdist.md">dnsdist</a>
               </p>
@@ -128,7 +128,7 @@
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="dnsproxy">dnsproxy</h3>
+            <h3 id="dnsproxy"><span class="embiggen">dnsproxy</span></h3>
               <p>
                 <a href="https://github.com/AdguardTeam/dnsproxy">dnsproxy</a>
               </p>
@@ -140,7 +140,7 @@
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="piholeftl">pihole-FTL</h3>
+            <h3 id="piholeftl"><span class="embiggen">pihole-FTL</span></h3>
               <p>
                 <a href="https://github.com/pi-hole/FTL">pihole-FTL</a>
               </p>
@@ -152,7 +152,7 @@
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="unbound">unbound</h3>
+            <h3 id="unbound"><span class="embiggen">unbound</span></h3>
               <p>
                 <a href="https://github.com/NLnetLabs/unbound">unbound</a>
               </p>
