--- a/connecttosainternet.html
+++ b/connecttosainternet.html
@@ -65,7 +65,7 @@
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header mdl-shadow--4dp">
         <div class="mdl-layout__header-row">
-          <span class="mdl-layout-title">saint<span style="font-weight: 300">ernet.xyz</span></span>
+          <span class="mdl-layout-title"><span class="embiggen">saint</span><span style="font-weight: 300">ernet.xyz</span></span>
           <div class="mdl-layout-spacer"></div>
           <nav class="mdl-navigation mdl-layout--large-screen-only">
             <a class="mdl-navigation__link" href="index.html">Home</a>
@@ -107,7 +107,7 @@
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="connecttosainternet">Connect to Sainternet</h3>
+            <h3 id="connecttosainternet"><span class="embiggen">Connect to Sainternet</span></h3>
               <p>
                 The following describes connecting to Sainternet Filtered DNS in several platforms, services.
               </p>
@@ -116,7 +116,7 @@
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="androidprivatedns"><icon class="fa-brands fa-android"></icon> Android Private DNS</h3>
+            <h3 id="androidprivatedns"><icon class="fa-brands fa-android"></icon> <span class="embiggen">Android Private DNS</span></h3>
               <p align="center">
                 Android 9 (Pie) or higher required.
               </p>
@@ -128,7 +128,7 @@
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="appleiosmacos"><icon class="fa-brands fa-apple"></icon> Apple iOS/macOS</h3>
+            <h3 id="appleiosmacos"><icon class="fa-brands fa-apple"></icon> <span class="embiggen">Apple iOS/macOS</span></h3>
               <p align="center">
                 Apple iOS 14/macOS Big Sur or higher required.
               </p>
@@ -152,7 +152,7 @@
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="googlechromechromium"><icon class="fa-brands fa-chrome"></icon> Google Chrome/Chromium</h3>
+            <h3 id="googlechromechromium"><icon class="fa-brands fa-chrome"></icon> <span class="embiggen">Google Chrome/Chromium</span></h3>
               <p>
                 Overflow Menu <icon class="fa-solid fa-ellipsis-vertical"></icon>, <icon class="fa-solid fa-arrow-right-long"></icon> Settings <icon class="fa-solid fa-cog"></icon>, <icon class="fa-solid fa-arrow-right-long"></icon> Select "Privacy and security", <icon class="fa-solid fa-arrow-right-long"></icon> Select "Use secure DNS", <icon class="fa-solid fa-arrow-right-long"></icon> Select "Choose another provider", <icon class="fa-solid fa-arrow-right-long"></icon> Enter "<b>dns.sainternet.xyz</b>", <icon class="fa-solid fa-arrow-right-long"></icon> Done.
               </p>
@@ -161,7 +161,7 @@
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="mozillafirefox"><icon class="fa-brands fa-firefox-browser"></icon> Mozilla Firefox</h3>
+            <h3 id="mozillafirefox"><icon class="fa-brands fa-firefox-browser"></icon> <span class="embiggen">Mozilla Firefox</span></h3>
               <p>
                 Menu <icon class="fa-solid fa-bars"></icon>, <icon class="fa-solid fa-arrow-right-long"></icon> Settings <icon class="fa-solid fa-cog"></icon>, <icon class="fa-solid fa-arrow-right-long"></icon> Select "General", <icon class="fa-solid fa-arrow-right-long"></icon> Select "Network Settings", <icon class="fa-solid fa-arrow-right-long"></icon> Select "Settings", <icon class="fa-solid fa-arrow-right-long"></icon> Select "Enable DNS over HTTPS", <icon class="fa-solid fa-arrow-right-long"></icon> Select "Use Provider", <icon class="fa-solid fa-arrow-right-long"></icon> Select "Custom", <icon class="fa-solid fa-arrow-right-long"></icon> Enter "<b>dns.sainternet.xyz</b>", <icon class="fa-solid fa-arrow-right-long"></icon> Select "OK", <icon class="fa-solid fa-arrow-right-long"></icon> Done.
               </p>
@@ -173,7 +173,7 @@
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="samsunginternet">Samsung Internet</h3>
+            <h3 id="samsunginternet"><span class="embiggen">Samsung Internet</span></h3>
               <p>
                 See instructions for <a href="#googlechromechromium">Google Chrome/Chromium</a>.
               </p>
