--- a/newsandupdates.html
+++ b/newsandupdates.html
@@ -66,7 +66,7 @@
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header mdl-shadow--4dp">
         <div class="mdl-layout__header-row">
-          <span class="mdl-layout-title">saint<span style="font-weight: 300">ernet.xyz</span></span>
+          <span class="mdl-layout-title"><span class="embiggen">saint</span><span style="font-weight: 300">ernet.xyz</span></span>
           <div class="mdl-layout-spacer"></div>
           <nav class="mdl-navigation mdl-layout--large-screen-only">
             <a class="mdl-navigation__link" href="index.html">Home</a>
@@ -104,7 +104,7 @@
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="newsandupdates">News and Updates</h3>
+            <h3 id="newsandupdates"><span class="embiggen">News and Updates</span></h3>
               <p>
                 This page will serve to detail news and updates relevant to Sainternet such as new features and developments, planned maintenance, etc.
               </p>
@@ -116,7 +116,7 @@
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="iosmacosmadeeasy"><icon class="fa-brands fa-apple"></icon> iOS/macOS Made Easy</h3>
+            <h3 id="iosmacosmadeeasy"><icon class="fa-brands fa-apple"></icon> <span class="embiggen">iOS/macOS Made Easy</span></h3>
               <p id="datetime">
                 Friday, 18 November 2022 22:30+13:00 (NZDT)
               </p>
