--- a/testsainternet.html
+++ b/testsainternet.html
@@ -66,7 +66,7 @@
     <div class="sainternet-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header mdl-shadow--4dp">
         <div class="mdl-layout__header-row">
-          <span class="mdl-layout-title">saint<span style="font-weight: 300">ernet.xyz</span></span>
+          <span class="mdl-layout-title"><span class="embiggen">saint</span><span style="font-weight: 300">ernet.xyz</span></span>
           <div class="mdl-layout-spacer"></div>
           <nav class="mdl-navigation mdl-layout--large-screen-only">
             <a class="mdl-navigation__link" href="index.html">Home</a>
@@ -108,7 +108,7 @@
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="testsainternet">Test Sainternet</h3>
+            <h3 id="testsainternet"><span class="embiggen">Test Sainternet</span></h3>
               <p>
                 The following describes testing Sainternet Filtered DNS using several methods, utilities.
               </p>
@@ -117,7 +117,7 @@
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="usingdig">Using dig</h3>
+            <h3 id="usingdig"><span class="embiggen">Using dig</span></h3>
               <p>
                 Example Sainternet test query using <a href="https://linux.die.net/man/1/dig">dig</a>:
               </p>
@@ -129,7 +129,7 @@ dig +short txt test.sainternet.xyz
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="usingdnslookup">Using dnslookup</h3>
+            <h3 id="usingdnslookup"><span class="embiggen">Using dnslookup</span></h3>
               <p>
                 Example Sainternet test query using <a href="https://github.com/ameshkov/dnslookup">dnslookup</a>:
               </p>
@@ -183,7 +183,7 @@ dnslookup example.org quic://dns.sainternet.xyz
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="usingnslookup">Using nslookup</h3>
+            <h3 id="usingnslookup"><span class="embiggen">Using nslookup</span></h3>
               <p>
                 Example Sainternet test query using <a href="https://linux.die.net/man/1/nslookup">nslookup</a>:
               </p>
