--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 Hello, I'm saint (aka. Hayden Pearce), and I make (and break) things on the internet sometimes.
               </p>
               <p>
-                This site could be considered one of those things.
+                This site details some of those things, and could be considered one of those things itself.
               </p>
           </div>
         </div>
