--- a/aboutsainternet.html
+++ b/aboutsainternet.html
@@ -55,7 +55,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.yellow-red.min.css">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.amber-red.min.css">
+    <link rel="preconnect" href="https://cdnjs.cloudflare.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link rel="stylesheet" href="resources/stylesheets/button_home.css">
     <link rel="stylesheet" href="resources/stylesheets/ribbons.css">
@@ -82,6 +83,7 @@
           <a class="mdl-navigation__link" href="newsandupdates.html">News and Updates</a>
           <a class="mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
           <a class="mdl-navigation__link" href="#aboutsainternet"> <b>- About Filtered DNS</b></a>
+          <a class="mdl-navigation__link" href="frequentlyaskedquestions.html"> - FAQs</a>
           <a class="mdl-navigation__link" href="connecttosainternet.html"> - Connect to Sainternet</a>
           <a class="mdl-navigation__link" href="portsandprotocols.html"> - Ports and Protocols</a>
           <a class="mdl-navigation__link" href="testsainternet.html"> - Test Sainternet</a>
@@ -94,7 +96,7 @@
           <a class="mdl-navigation__link" href="https://github.com/saint-lascivious/unbound-config">unbound-config</a>
         </nav>
       </div>
-      <div class="yellow-ribbon"></div>
+      <div class="amber-ribbon"></div>
       <main class="sainternet-main mdl-layout__content">
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
