saint-lascivious.github.io: faq cost/funding
Changes to be committed:
 - modified:   frequentlyaskedquestions.html

--- a/frequentlyaskedquestions.html
+++ b/frequentlyaskedquestions.html
@@ -102,7 +102,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-color--white mdl-shadow--8dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <div class="sainternet-crumbs mdl-color-text--grey-500">
-              <a href="index.html">Home</a> &gt; <a href="filtereddns.html">Filtered DNS</a> &gt; <a href="#frequentlyaskedquestions"><b>Frequently Asked Questions</b></a><br><a href="#thefivews">The Five Ws</a>
+              <a href="index.html">Home</a> &gt; <a href="filtereddns.html">Filtered DNS</a> &gt; <a href="#frequentlyaskedquestions"><b>Frequently Asked Questions</b></a><br><a href="#thefivews">The Five Ws</a>, <a href="#cost">Who Pays For Sainternet?</a>, <a href="#funding">How Does Sainternet Make Money?</a>
             </div>
           </div>
         </div>
@@ -155,6 +155,30 @@
               </p>
               <p>
                 To educate myself in related technologies, and hopefully to provide a better domain name resolution experience along the way.
+              </p>
+           </div>
+        </div>
+        <div class="sainternet-container mdl-grid">
+          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+          <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+            <h3 id="cost"><span class="embiggen">Who Pays For Sainternet?</span></h3>
+              <p>
+                I do.
+              </p>
+              <p>
+                Sainternet requires very little additional overhead outside of my own network requirements.
+              </p>
+           </div>
+        </div>
+        <div class="sainternet-container mdl-grid">
+          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+          <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+            <h3 id="funding"><span class="embiggen">How Does Sainternet Make Money?</span></h3>
+              <p>
+                It doesn't.
+              </p>
+              <p>
+                Sainternet runs at cost and I intend for this to be the case as long as I am able to provide it.
               </p>
            </div>
         </div>
