saint-lascivious.github.io: yeet stupid arrow icon
use list flows instead

put downloads in sympathetic unorderd single item lists, move icon

Changes to be committed:
 - modified:   connecttosainternet.html

--- a/connecttosainternet.html
+++ b/connecttosainternet.html
@@ -122,9 +122,15 @@
               <p align="center">
                 Android 9 (Pie) or higher required.
               </p>
-              <p>
-                Settings <icon class="fa-solid fa-cog"></icon>, <icon class="fa-solid fa-arrow-right-long"></icon> Search <icon class="fa-solid fa-magnifying-glass"></icon>, <icon class="fa-solid fa-arrow-right-long"></icon> Search for "Private DNS", <icon class="fa-solid fa-arrow-right-long"></icon> Select "Private DNS", <icon class="fa-solid fa-arrow-right-long"></icon> Select "Designated Private DNS", <icon class="fa-solid fa-arrow-right-long"></icon> Enter "<b>dns.sainternet.xyz</b>", <icon class="fa-solid fa-arrow-right-long"></icon> Done.
-              </p>
+              <ol>
+                <li>Settings <icon class="fa-solid fa-cog"></icon></li>
+                <li>Search <icon class="fa-solid fa-magnifying-glass"></icon></li>
+                <li>Search for "Private DNS"</li>
+                <li>Select "Private DNS"</li>
+                <li>Select "Designated Private DNS"</li>
+                <li>Enter "<b>dns.sainternet.xyz</b>"</li>
+                <li>Done</li>
+              </ol>
            </div>
         </div>
         <div class="sainternet-container mdl-grid">
@@ -138,13 +144,22 @@
                 Select and download one of the following Sainternet Filtered DNS Profiles depending on your wants or requirements and open the downloaded file. You may be prompted one or more times, select to accept. These profiles are not digitally signed and that is expected/normal.
               </p>
               <p>
-                Sainternet DNS over HTTPS:<br><icon class="fa-solid fa-download"></icon> <a href="downloads/apple/sainternet-https-only.mobileconfig" download="sainternet-https-only.mobileconfig">sainternet-https-only.mobileconfig</a>
+                Sainternet DNS over HTTPS:
+                <ul>
+                  <li><a href="downloads/apple/sainternet-https-only.mobileconfig" download="sainternet-https-only.mobileconfig">sainternet-https-only.mobileconfig <icon class="fa-solid fa-download"></icon></a></li>
+                </ul>
               </p>
               <p>
-                Sainternet DNS over TLS:<br><icon class="fa-solid fa-download"></icon> <a href="downloads/apple/sainternet-tls-only.mobileconfig" download="sainternet-tls-only.mobileconfig">sainternet-tls-only.mobileconfig</a>
+                Sainternet DNS over TLS:
+                <ul>
+                  <li><a href="downloads/apple/sainternet-tls-only.mobileconfig" download="sainternet-tls-only.mobileconfig">sainternet-tls-only.mobileconfig <icon class="fa-solid fa-download"></icon></a>
+                </ul>
               </p>
               <p>
-                Sainternet DNS over HTTPS and TLS:<br><icon class="fa-solid fa-download"></icon> <a href="downloads/apple/sainternet-https-and-tls.mobileconfig" download="sainternet-https-and-tls.mobileconfig">sainternet-https-and-tls.mobileconfig</a>
+                Sainternet DNS over HTTPS and TLS:
+                <ul>
+                  <li><a href="downloads/apple/sainternet-https-and-tls.mobileconfig" download="sainternet-https-and-tls.mobileconfig">sainternet-https-and-tls.mobileconfig <icon class="fa-solid fa-download"></icon></a>
+                </ul>
               </p>
               <p>
                 Sainternet intentionally disables Apple's <a href="https://developer.apple.com/support/prepare-your-network-for-icloud-private-relay">iCloud Private Relay</a> to prevent it from bypassing Sainternet.
@@ -155,18 +170,34 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <h3 id="googlechromechromium"><icon class="fa-brands fa-chrome"></icon> <span class="embiggen">Google Chrome/Chromium</span></h3>
-              <p>
-                Overflow Menu <icon class="fa-solid fa-ellipsis-vertical"></icon>, <icon class="fa-solid fa-arrow-right-long"></icon> Settings <icon class="fa-solid fa-cog"></icon>, <icon class="fa-solid fa-arrow-right-long"></icon> Select "Privacy and security", <icon class="fa-solid fa-arrow-right-long"></icon> Select "Use secure DNS", <icon class="fa-solid fa-arrow-right-long"></icon> Select "Choose another provider", <icon class="fa-solid fa-arrow-right-long"></icon> Enter "<b>dns.sainternet.xyz</b>", <icon class="fa-solid fa-arrow-right-long"></icon> Done.
-              </p>
+              <ol>
+                <li>Overflow Menu <icon class="fa-solid fa-ellipsis-vertical"></icon></li>
+                <li>Settings <icon class="fa-solid fa-cog"></icon></li>
+                <li>Select "Privacy and security"</li>
+                <li>Select "Use secure DNS"</li>
+                <li>Select "Choose another provider"</li>
+                <li>Enter "<b>dns.sainternet.xyz</b>"</li>
+                <li>Done</li>
+              </ol>
            </div>
         </div>
         <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <h3 id="mozillafirefox"><icon class="fa-brands fa-firefox-browser"></icon> <span class="embiggen">Mozilla Firefox</span></h3>
-              <p>
-                Menu <icon class="fa-solid fa-bars"></icon>, <icon class="fa-solid fa-arrow-right-long"></icon> Settings <icon class="fa-solid fa-cog"></icon>, <icon class="fa-solid fa-arrow-right-long"></icon> Select "General", <icon class="fa-solid fa-arrow-right-long"></icon> Select "Network Settings", <icon class="fa-solid fa-arrow-right-long"></icon> Select "Settings", <icon class="fa-solid fa-arrow-right-long"></icon> Select "Enable DNS over HTTPS", <icon class="fa-solid fa-arrow-right-long"></icon> Select "Use Provider", <icon class="fa-solid fa-arrow-right-long"></icon> Select "Custom", <icon class="fa-solid fa-arrow-right-long"></icon> Enter "<b>dns.sainternet.xyz</b>", <icon class="fa-solid fa-arrow-right-long"></icon> Select "OK", <icon class="fa-solid fa-arrow-right-long"></icon> Done.
-              </p>
+              <ol>
+                <li>Menu <icon class="fa-solid fa-bars"></icon></li>
+                <li>Settings <icon class="fa-solid fa-cog"></icon></li>
+                <li>Select "General"</li>
+                <li>Select "Network Settings"</li>
+                <li>Select "Settings"</li>
+                <li>Select "Enable DNS over HTTPS"</li>
+                <li>Select "Use Provider"</li>
+                <li>Select "Custom"</li>
+                <li>Enter "<b>dns.sainternet.xyz</b>"</li>
+                <li>Select "OK"</li>
+                <li>Done</li>
+              </ol>
               <p>
                 Sainternet intentionally disables Mozilla's <a href="https://support.mozilla.org/en-US/kb/configuring-networks-disable-dns-over-https">default DNS over HTTPS</a> to prevent it from bypassing Sainternet (ignored if manually configured).
               </p>
@@ -177,7 +208,7 @@
           <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <h3 id="samsunginternet"><span class="embiggen">Samsung Internet</span></h3>
               <p>
-                See instructions for <a href="#googlechromechromium">Google Chrome/Chromium</a>.
+                Use the instructions for <a href="#googlechromechromium">Google Chrome/Chromium</a>.
               </p>
            </div>
         </div>
