saint-lascivious.github.io: list flow for ios/macos connectto
Changes to be committed:
 - modified:   connecttosainternet.html

--- a/connecttosainternet.html
+++ b/connecttosainternet.html
@@ -140,26 +140,34 @@
               <p align="center">
                 Apple iOS 14/macOS Big Sur or higher required.
               </p>
+              <ol>
+                <li>Select a DNS Profile from above</li>
+                <li>Download the selected DNS Profile</li>
+                <li>Navigate to the downloaded DNS Profile</li>
+                <li>Open the DNS Profile</li>
+                <li>Agree to any/all prompts</li>
+                <li>Done</li>
+              </ol>
               <p>
-                Select and download one of the following Sainternet Filtered DNS Profiles depending on your wants or requirements and open the downloaded file. You may be prompted one or more times, select to accept. These profiles are not digitally signed and that is expected/normal.
-              </p>
-              <p>
-                Sainternet DNS over HTTPS:
+                DNS over HTTPS (DoHTTPS):
                 <ul>
                   <li><a href="downloads/apple/sainternet-https-only.mobileconfig" download="sainternet-https-only.mobileconfig">sainternet-https-only.mobileconfig <icon class="fa-solid fa-download"></icon></a></li>
                 </ul>
               </p>
               <p>
-                Sainternet DNS over TLS:
+                DNS over TLS (DoTLS):
                 <ul>
                   <li><a href="downloads/apple/sainternet-tls-only.mobileconfig" download="sainternet-tls-only.mobileconfig">sainternet-tls-only.mobileconfig <icon class="fa-solid fa-download"></icon></a>
                 </ul>
               </p>
               <p>
-                Sainternet DNS over HTTPS and TLS:
+                DoHTTPS and DoTLS:
                 <ul>
                   <li><a href="downloads/apple/sainternet-https-and-tls.mobileconfig" download="sainternet-https-and-tls.mobileconfig">sainternet-https-and-tls.mobileconfig <icon class="fa-solid fa-download"></icon></a>
                 </ul>
+              </p>
+              <p>
+                These profiles are not digitally signed and that is expected/normal.
               </p>
               <p>
                 Sainternet intentionally disables Apple's <a href="https://developer.apple.com/support/prepare-your-network-for-icloud-private-relay">iCloud Private Relay</a> to prevent it from bypassing Sainternet.
